--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~9.0.2",
     "@ng-select/ng-select": "^3.7.3",
     "@swimlane/ngx-charts": "^13.0.2",
+    "kalmanjs": "^1.1.0",
     "moment": "^2.24.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
